--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <?php
 
 // Set the URL of the M3U playlist
-$playlist_url = "http://example.com/tataplay.m3u";
+$playlist_url = "https://tsneh.vercel.app/y1bdp-tl1ep4";
 
 // Parse the M3U playlist into an array of channels
 $channels = parse_m3u_playlist($playlist_url);
